# webscraping-airline-tickets

./: LICENSE  README.md  pyproject.toml
app/: test.ipynb  webscraping.py
